--- a/public/styles.css
+++ b/public/styles.css
@@ -571,12 +571,12 @@ video {
   top: 0px;
 }
 
-.z-0{
-  z-index: 0;
-}
-
 .z-10{
   z-index: 10;
+}
+
+.z-0{
+  z-index: 0;
 }
 
 .col-span-3{
@@ -600,6 +600,10 @@ video {
   margin-right: auto;
 }
 
+.ml-6{
+  margin-left: 1.5rem;
+}
+
 .ml-2{
   margin-left: 0.5rem;
 }
@@ -608,8 +612,24 @@ video {
   margin-left: 2rem;
 }
 
+.ml-5{
+  margin-left: 1.25rem;
+}
+
 .mt-8{
   margin-top: 2rem;
+}
+
+.mb-6{
+  margin-bottom: 1.5rem;
+}
+
+.mt-2{
+  margin-top: 0.5rem;
+}
+
+.mt-3{
+  margin-top: 0.75rem;
 }
 
 .ml-auto{
@@ -636,26 +656,6 @@ video {
   margin-bottom: 0.5rem;
 }
 
-.mb-6{
-  margin-bottom: 1.5rem;
-}
-
-.mt-2{
-  margin-top: 0.5rem;
-}
-
-.mt-3{
-  margin-top: 0.75rem;
-}
-
-.ml-5{
-  margin-left: 1.25rem;
-}
-
-.ml-6{
-  margin-left: 1.5rem;
-}
-
 .-mt-\[60px\]{
   margin-top: -60px;
 }
@@ -678,6 +678,10 @@ video {
 
 .mr-6{
   margin-right: 1.5rem;
+}
+
+.mt-4{
+  margin-top: 1rem;
 }
 
 .block{
@@ -708,16 +712,12 @@ video {
   display: none;
 }
 
-.h-4{
-  height: 1rem;
-}
-
-.h-full{
-  height: 100%;
-}
-
 .h-6{
   height: 1.5rem;
+}
+
+.h-4{
+  height: 1rem;
 }
 
 .h-\[150px\]{
@@ -732,12 +732,20 @@ video {
   height: 1.75rem;
 }
 
+.h-full{
+  height: 100%;
+}
+
 .min-h-screen{
   min-height: 100vh;
 }
 
 .w-screen{
   width: 100vw;
+}
+
+.w-6{
+  width: 1.5rem;
 }
 
 .w-4{
@@ -750,10 +758,6 @@ video {
 
 .w-1\/3{
   width: 33.333333%;
-}
-
-.w-6{
-  width: 1.5rem;
 }
 
 .w-\[120px\]{
@@ -824,12 +828,31 @@ video {
   justify-content: space-between;
 }
 
-.gap-5{
-  gap: 1.25rem;
-}
-
 .gap-4{
   gap: 1rem;
+}
+
+.gap-x-8{
+  -webkit-column-gap: 2rem;
+          column-gap: 2rem;
+}
+
+.gap-x-6{
+  -webkit-column-gap: 1.5rem;
+          column-gap: 1.5rem;
+}
+
+.gap-y-8{
+  row-gap: 2rem;
+}
+
+.gap-x-4{
+  -webkit-column-gap: 1rem;
+          column-gap: 1rem;
+}
+
+.gap-y-6{
+  row-gap: 1.5rem;
 }
 
 .overflow-hidden{
@@ -882,11 +905,6 @@ video {
   border-color: rgb(156 163 175 / var(--tw-border-opacity));
 }
 
-.border-gray-500{
-  --tw-border-opacity: 1;
-  border-color: rgb(107 114 128 / var(--tw-border-opacity));
-}
-
 .border-gray-900{
   --tw-border-opacity: 1;
   border-color: rgb(17 24 39 / var(--tw-border-opacity));
@@ -905,6 +923,11 @@ video {
 .border-primaryOrange{
   --tw-border-opacity: 1;
   border-color: rgb(235 94 40 / var(--tw-border-opacity));
+}
+
+.border-gray-500{
+  --tw-border-opacity: 1;
+  border-color: rgb(107 114 128 / var(--tw-border-opacity));
 }
 
 .bg-white{
@@ -927,11 +950,6 @@ video {
   background-color: rgb(243 244 246 / var(--tw-bg-opacity));
 }
 
-.bg-gray-200{
-  --tw-bg-opacity: 1;
-  background-color: rgb(229 231 235 / var(--tw-bg-opacity));
-}
-
 .bg-gray-50{
   --tw-bg-opacity: 1;
   background-color: rgb(249 250 251 / var(--tw-bg-opacity));
@@ -950,6 +968,16 @@ video {
 .bg-darkBrown{
   --tw-bg-opacity: 1;
   background-color: rgb(37 36 34 / var(--tw-bg-opacity));
+}
+
+.bg-red-200{
+  --tw-bg-opacity: 1;
+  background-color: rgb(254 202 202 / var(--tw-bg-opacity));
+}
+
+.bg-gray-200{
+  --tw-bg-opacity: 1;
+  background-color: rgb(229 231 235 / var(--tw-bg-opacity));
 }
 
 .bg-opacity-40{
@@ -972,12 +1000,12 @@ video {
   stroke: #EB5E28;
 }
 
-.p-4{
-  padding: 1rem;
-}
-
 .p-2{
   padding: 0.5rem;
+}
+
+.p-4{
+  padding: 1rem;
 }
 
 .p-1\.5{
@@ -986,11 +1014,6 @@ video {
 
 .p-1{
   padding: 0.25rem;
-}
-
-.py-8{
-  padding-top: 2rem;
-  padding-bottom: 2rem;
 }
 
 .py-2{
@@ -1003,24 +1026,29 @@ video {
   padding-right: 1rem;
 }
 
-.px-8{
-  padding-left: 2rem;
-  padding-right: 2rem;
-}
-
 .px-6{
   padding-left: 1.5rem;
   padding-right: 1.5rem;
 }
 
-.py-3{
-  padding-top: 0.75rem;
-  padding-bottom: 0.75rem;
+.py-8{
+  padding-top: 2rem;
+  padding-bottom: 2rem;
+}
+
+.px-8{
+  padding-left: 2rem;
+  padding-right: 2rem;
 }
 
 .px-5{
   padding-left: 1.25rem;
   padding-right: 1.25rem;
+}
+
+.py-3{
+  padding-top: 0.75rem;
+  padding-bottom: 0.75rem;
 }
 
 .py-5{
@@ -1106,6 +1134,11 @@ video {
   color: rgb(107 114 128 / var(--tw-text-opacity));
 }
 
+.text-white{
+  --tw-text-opacity: 1;
+  color: rgb(255 255 255 / var(--tw-text-opacity));
+}
+
 .text-gray-700{
   --tw-text-opacity: 1;
   color: rgb(55 65 81 / var(--tw-text-opacity));
@@ -1114,11 +1147,6 @@ video {
 .text-gray-600{
   --tw-text-opacity: 1;
   color: rgb(75 85 99 / var(--tw-text-opacity));
-}
-
-.text-white{
-  --tw-text-opacity: 1;
-  color: rgb(255 255 255 / var(--tw-text-opacity));
 }
 
 .text-gray-800{
@@ -1189,14 +1217,6 @@ video {
     margin-top: 4rem;
   }
 
-  .md\:mt-0{
-    margin-top: 0px;
-  }
-
-  .md\:ml-3{
-    margin-left: 0.75rem;
-  }
-
   .md\:ml-12{
     margin-left: 3rem;
   }
@@ -1205,12 +1225,16 @@ video {
     margin-top: 2.5rem;
   }
 
-  .md\:mt-32{
-    margin-top: 8rem;
+  .md\:mt-0{
+    margin-top: 0px;
   }
 
-  .md\:ml-8{
-    margin-left: 2rem;
+  .md\:ml-3{
+    margin-left: 0.75rem;
+  }
+
+  .md\:mt-32{
+    margin-top: 8rem;
   }
 
   .md\:block{
@@ -1284,11 +1308,6 @@ video {
   .md\:px-6{
     padding-left: 1.5rem;
     padding-right: 1.5rem;
-  }
-
-  .md\:py-2{
-    padding-top: 0.5rem;
-    padding-bottom: 0.5rem;
   }
 
   .md\:text-left{
