--- a/public/styles.css
+++ b/public/styles.css
@@ -1255,6 +1255,11 @@ video {
   color: rgb(29 78 216 / var(--tw-text-opacity));
 }
 
+.text-gray-400{
+  --tw-text-opacity: 1;
+  color: rgb(156 163 175 / var(--tw-text-opacity));
+}
+
 .underline-offset-2{
   text-underline-offset: 2px;
 }
