--- a/public/styles.css
+++ b/public/styles.css
@@ -629,6 +629,11 @@ video {
   margin-right: 0.5rem;
 }
 
+.my-3{
+  margin-top: 0.75rem;
+  margin-bottom: 0.75rem;
+}
+
 .ml-6{
   margin-left: 1.5rem;
 }
@@ -717,6 +722,10 @@ video {
   margin-right: 1.5rem;
 }
 
+.mr-5{
+  margin-right: 1.25rem;
+}
+
 .block{
   display: block;
 }
@@ -773,6 +782,10 @@ video {
   height: 1.75rem;
 }
 
+.h-9{
+  height: 2.25rem;
+}
+
 .min-h-screen{
   min-height: 100vh;
 }
@@ -815,6 +828,14 @@ video {
 
 .w-7{
   width: 1.75rem;
+}
+
+.w-auto{
+  width: auto;
+}
+
+.w-9{
+  width: 2.25rem;
 }
 
 .min-w-\[25\%\]{
@@ -1084,6 +1105,16 @@ video {
   background-color: rgb(37 36 34 / var(--tw-bg-opacity));
 }
 
+.bg-green-700{
+  --tw-bg-opacity: 1;
+  background-color: rgb(21 128 61 / var(--tw-bg-opacity));
+}
+
+.bg-red-700{
+  --tw-bg-opacity: 1;
+  background-color: rgb(185 28 28 / var(--tw-bg-opacity));
+}
+
 .bg-opacity-40{
   --tw-bg-opacity: 0.4;
 }
@@ -1102,6 +1133,10 @@ video {
 
 .bg-cover{
   background-size: cover;
+}
+
+.bg-fixed{
+  background-attachment: fixed;
 }
 
 .fill-blue-600{
@@ -1211,10 +1246,6 @@ video {
   text-align: center;
 }
 
-.text-right{
-  text-align: right;
-}
-
 .font-body{
   font-family: Inter;
 }
@@ -1242,6 +1273,16 @@ video {
 .text-base{
   font-size: 1rem;
   line-height: 1.5rem;
+}
+
+.text-2xl{
+  font-size: 1.5rem;
+  line-height: 2rem;
+}
+
+.text-4xl{
+  font-size: 2.25rem;
+  line-height: 2.5rem;
 }
 
 .font-normal{
